--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <header>
 
         <div class="logo">
-            <img src="imagens/logo (2).png" alt="Logo G1" style="height:50px;">
+            <img src="logo (2).png" alt="Logo G1" style="height:50px;">
             <h1 style="color:white; font-size: 25px; margin: 0;">O portal de Notícias da globo</h1>
         </div>
 
@@ -153,7 +153,7 @@
     </main>
     <aside>
         <div class="Imagemhiper">
-            <img src="imagens/aside.png" alt="Hipertensão" style="height:600px;">
+            <img src="aside.png" alt="Hipertensão" style="height:600px;">
         </div>
     </aside>
     <footer>
@@ -167,4 +167,5 @@
 </body>
 
 </html>
+
 
